@@ -1,3 +1,11 @@
+2010-03-10  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclTest.c       Remove unnecessary '&' decoration for function
+	* generic/tclIOUtil.c     pointers
+	* win/tclWin32Dll.c       Double declaration of TclNativeDupInternalRep
+	* unix/tclIOUtil.c
+	* unix/dltest/.cvsignore Ignore *.so here
+
 2010-03-09  Andreas Kupries  <andreask@activestate.com>
 
 	* generic/tclIORChan.c: [Bug 2936225]: Thanks to Alexandre Ferrieux
